# jiopc-hibernate

./: .gitignore  CHANGELOG.md  DESIGN.md  INSTALL.md  README.md  SCHEMA.md  pyproject.toml
benchmarks/: benchmark.py  methodology.md  results.md  vm-results.md
config/: config.json  handlers.json
demo/: DEMO.md
integration/autostart/: jiopc-hibernate-guard.desktop  jiopc-hibernate-restore.desktop
integration/idle/: README.md
integration/lxqt/: README.md  jiopc-hibernate-leave
packaging/: build-deb.sh
packaging/debian/: conffiles  postinst  prerm
scripts/: vm-verify.sh
src/jiopc_hibernate/: __init__.py  __main__.py  cli.py  config.py  geometry.py  guard.py  log.py  notify.py  paths.py  restore.py  saver.py  selftest.py  state.py  system.py  unsaved.py  windows.py
src/jiopc_hibernate/handlers/: __init__.py  base.py  chrome.py  document.py  filemanager.py  registry.py  terminal.py
tests/: conftest.py  test_capture.py  test_handlers.py  test_restore.py  test_state.py
